src/test/ui/issues/issue-34255-1.stderr
error: expected type, found `42`
  --> $DIR/issue-34255-1.rs:8:24
   |
LL |     Test::Drill(field: 42);
   |                      - ^^ expected type
   |                      |
   |                      tried to parse a type due to this type ascription
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: for more information, see https://github.com/rust-lang/rust/issues/23416

error: aborting due to previous error

